# llmdiff

./: AUDIT_REPORT_2026-03-01.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  fix_test.py  fix_test_cache.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
diffs/: 20260228_040637_gpt-4o_vs_claude-3.html  20260228_040820_gpt-4o_vs_claude-3.html  20260228_042347_gpt-4o_vs_claude-3.html  20260228_042414_gpt-4o_vs_claude-3.html  20260228_042628_gpt-4o_vs_claude-3.html  20260228_044146_gpt-4o_vs_claude-3.html  20260228_044418_gpt-4o_vs_claude-3.html  20260228_044523_gpt-4o_vs_claude-3.html  20260228_044753_gpt-4o_vs_claude-3.html  20260228_050216_gpt-4o_vs_claude-3.html  20260228_050303_gpt-4o_vs_claude-3.html  20260228_051135_gpt-4o_vs_claude-3.html  20260228_051246_gpt-4o_vs_claude-3.html  20260228_052535_gpt-4o_vs_claude-3.html  20260228_052650_gpt-4o_vs_claude-3.html  20260228_052710_gpt-4o_vs_claude-3.html  20260228_052805_gpt-4o_vs_claude-3.html  20260228_052945_gpt-4o_vs_claude-3.html  20260228_054743_gpt-4o_vs_claude-3.html  20260228_060056_gpt-4o_vs_claude-3.html  20260228_060239_gpt-4o_vs_claude-3.html  20260228_060333_gpt-4o_vs_claude-3.html  20260228_062247_gpt-4o_vs_claude-3.html  20260228_062447_gpt-4o_vs_claude-3.html  20260228_062914_gpt-4o_vs_claude-3.html  20260228_110651_gpt-4o_vs_claude-3.html  20260228_110818_gpt-4o_vs_claude-3.html  20260228_114538_gpt-4o_vs_claude-3.html  20260228_114652_gpt-4o_vs_claude-3.html  20260228_114846_gpt-4o_vs_claude-3.html  20260228_121055_gpt-4o_vs_claude-3.html  20260301_045206_gpt-4o_vs_claude-3.html  20260301_045756_gpt-4o_vs_claude-3.html  20260301_050508_gpt-4o_vs_claude-3.html  20260301_050843_gpt-4o_vs_claude-3.html  20260301_104720_gpt-4o_vs_claude-3.html  20260301_105108_gpt-4o_vs_claude-3.html  20260301_110004_gpt-4o_vs_claude-3.html  20260301_110107_gpt-4o_vs_claude-3.html  20260301_110820_gpt-4o_vs_claude-3.html  (+2 more)
docs/: api.md  ci-cd.md  cli-reference.md  configuration.md  getting-started.md  html-reports.md  providers.md  schema-events.md
docs/tutorials/: 00-introduction.md  01-first-comparison.md  02-semantic-scoring.md  03-prompt-engineering.md  04-batch-evaluation.md  05-ci-cd-regression-gate.md  06-llm-as-a-judge.md  07-multi-model-comparison.md  08-cost-tracking.md  09-json-struct-diff.md  10-python-api.md  11-schema-events.md  README.md
examples/: prompts.yml
examples/inputs/: article_a.txt  article_b.txt  func.py
llm_diff/: __init__.py  api.py  batch.py  cache.py  cli.py  config.py  diff.py  judge.py  metrics.py  multi.py  pricing.py  providers.py  renderer.py  report.py  schema_events.py  semantic.py
llm_diff/templates/: batch_report.html.j2  report.html.j2
scripts/: benchmark.py
tests/: test_api.py  test_batch.py  test_cache.py  test_cli.py  test_config.py  test_diff.py  test_edge_cases.py  test_integration.py  test_json_struct_diff.py  test_judge.py  test_metrics.py  test_multi.py  test_pricing.py  test_providers.py  test_regression.py  test_renderer.py  test_report.py  test_schema_events.py  test_semantic.py
