[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-diff"
version = "1.3.0"
description = "A CLI tool for comparing LLM outputs — semantically, visually, and at scale"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "diff", "cli", "openai", "claude", "prompt-testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "openai>=1.14",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "llm-toolkit-schema>=1.1.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "numpy>=1.24",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
llm-diff = "llm_diff.cli:main"

[project.urls]
Homepage = "https://github.com/veerarag1973/llmdiff"
Repository = "https://github.com/veerarag1973/llmdiff"
"Bug Tracker" = "https://github.com/veerarag1973/llmdiff/issues"
Documentation = "https://github.com/veerarag1973/llmdiff/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["llm_diff"]
artifacts = ["llm_diff/templates"]

[tool.hatch.build]
include = [
    "llm_diff/**",
]

# --- Ruff (linting + formatting) ---
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
]
ignore = [
    "S101",    # Use of `assert` in tests
    "E501",    # Line too long — enforced via formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]
"examples/inputs/**" = ["ANN"]
"llm_diff/schema_events.py" = ["ANN401"]

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
